Fix github link issue on mobile

--- a/client/css/style.less
+++ b/client/css/style.less
@@ -35,6 +35,8 @@ body a, body a:hover, body a:visited {
 
 .menu {
   padding-top: 6px;
+  position: relative;
+  z-index: 1;
 }
 
 .metaphor {
